# service_for_my_projects

./: README.md  pyproject.toml
logger/: __init__.py
service/: __init__.py  logger_settings.py
service_for_my_projects/: __init__.py
