[tool.poetry]
name = "service_for_my_projects"
version = "0.1.34"
description = ""
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "service_for_my_projects"}]

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "^4.41.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
